objects/MDPERSONATOR__MD_businessCoderResult__c.object
<CustomObject>
    <fields>
        <fullName>MDPERSONATOR__AddressLine1__c</fullName>
        <label>AddressLine1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CensusBlock__c</fullName>
        <label>CensusBlock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CensusTract__c</fullName>
        <label>CensusTract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CompanyName__c</fullName>
        <label>CompanyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryCode__c</fullName>
        <label>CountryCode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryName__c</fullName>
        <label>CountryName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountyFIPS__c</fullName>
        <label>CountyFIPS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountyName__c</fullName>
        <label>CountyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DeliveryIndicator__c</fullName>
        <label>DeliveryIndicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__EIN__c</fullName>
        <label>EIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__EmployeesEstimate__c</fullName>
        <label>EmployeesEstimate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Latitude__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LocationType__c</fullName>
        <label>LocationType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Mapping__c</fullName>
        <label>Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MelissaAddressKeyBase__c</fullName>
        <label>MelissaAddressKeyBase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MelissaAddressKey__c</fullName>
        <label>MelissaAddressKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MelissaEnterpriseKey__c</fullName>
        <label>MelissaEnterpriseKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NAICSCode1__c</fullName>
        <label>NAICSCode1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NAICSCode2__c</fullName>
        <label>NAICSCode2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NAICSCode3__c</fullName>
        <label>NAICSCode3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NAICSDescription1__c</fullName>
        <label>NAICSDescription1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NAICSDescription2__c</fullName>
        <label>NAICSDescription2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NAICSDescription3__c</fullName>
        <label>NAICSDescription3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PlaceCode__c</fullName>
        <label>PlaceCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PlaceName__c</fullName>
        <label>PlaceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Plus4__c</fullName>
        <label>Plus4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__RecordID__c</fullName>
        <label>RecordID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Results__c</fullName>
        <label>Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SICCode1__c</fullName>
        <label>SICCode1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SICCode2__c</fullName>
        <label>SICCode2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SICCode3__c</fullName>
        <label>SICCode3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SICDescription1__c</fullName>
        <label>SICDescription1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SICDescription2__c</fullName>
        <label>SICDescription2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SICDescription3__c</fullName>
        <label>SICDescription3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SalesEstimate__c</fullName>
        <label>SalesEstimate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__StockTicker__c</fullName>
        <label>StockTicker</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Suite__c</fullName>
        <label>Suite</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TotalContacts__c</fullName>
        <label>TotalContacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TotalSuggestions__c</fullName>
        <label>TotalSuggestions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__WebAddress__c</fullName>
        <label>WebAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Clean Suite BusinessCoder Result</label>
    <nameField>
        <label>BusinessCoder Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clean Suite BusinessCoder Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>